--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.30)
-project(OpenGLGame VERSION 0.2.0 LANGUAGES C CXX)
+project(OpenGLGame VERSION 0.3.1 LANGUAGES C CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -16,6 +16,9 @@ set(SOURCES
     src/Buffer.cpp
     src/VertexArray.cpp
     src/Shader.cpp
+    src/Renderer.cpp
+    vendor/stb_image/stb_image.cpp
+    src/Texture.cpp
 )
 
 set(HEADERS 
@@ -24,6 +27,9 @@ set(HEADERS
     src/Buffer.h
     src/VertexArray.h
     src/Shader.h
+    src/Renderer.h
+    vendor/stb_image/stb_image.h
+    src/Texture.h
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
